prover-ray/zkcdriver/testdata/synced/invalid/basic_41.zkc
//error:5:13-14:unknown symbol
output out(addr:u16) -> (lhs:u16, rhs:u16)

fn f(x:u16, y:u8) {
   out[0] = X,y
}
